if get_option('examples')

# RC4 Example
example_RC4 = executable(
    'example_rc4', 'example_rc4.cpp',
    dependencies: securitylib_dep
)

# AES Example
example_AES = executable(
    'example_AES', 'example_AES.cpp',
    dependencies: securitylib_dep
)

# MD5 Example
example_MD5 = executable(
    'example_MD5', 'example_MD5.cpp',
    dependencies: securitylib_dep
)

endif